# Megasupercoolecs_cpp

./: .clang-tidy  .gitmodules  CMakeLists.txt  Doxyfile  dummy.cpp
include/: msce.h
include/MSCE/: msce.h
lib/libglad/: CMakeLists.txt  glad.c
lib/libglad/glad/: glad.h
src/: CMakeLists.txt  built_in_system_registry.hpp  main.cpp
src/BuiltInComponents/: transformComponent.hpp
src/BuiltInSystems/: CMakeLists.txt  graphicsSystem.h  timeSystem.h
src/Common/: CMakeLists.txt  vector.cpp  vector.h
src/Common/Colors/: CMakeLists.txt
src/Common/Interfaces/: iSingleton.hpp
src/ECS/: CMakeLists.txt  component.cpp  component.h  entity.cpp  entity.h  system.cpp  system.h  system_registry.hpp
src/ECS/Common/Colors/: rgba.cpp  rgba.h
src/ECS/Graphics/: MSCEWindow.h  MSCEWndow.cpp
src/ECS/Graphics/Colors/: rgba.cpp  rgba.h
src/ECS/Graphics/MSCEWindow/: MSCEWindow.h  MSCEWndow.cpp
src/ECS/Graphics/Vectors/: vector.cpp  vector.h
src/ECS/Managers/: systemManager.cpp
src/ECS/System/: system.cpp  system.h  systemManager.cpp  systemManager.h
src/Graphics/: CMakeLists.txt  MSCEWindow.cpp  MSCEWindow.h
src/MSCE/: CMakeLists.txt  built_in_system_registry.hpp  logger.cpp  logger.h  logger.hpp  msce_macros.h  msce_macros.hpp
src/MSCE/ABI/: CMakeLists.txt  abi_macros.h  core_abi.cpp  core_abi.h
src/MSCE/BuiltInComponents/: CMakeLists.txt  transformComponent.hpp
src/MSCE/BuiltInSystems/: CMakeLists.txt  graphicsSystem.cpp  graphicsSystem.h  timeSystem.cpp  timeSystem.h
src/MSCE/BuiltIns/: CMakeLists.txt  defaultShader.hpp  graphicsSystem.cpp  graphicsSystem.h  timeSystem.cpp  transformComponent.hpp
src/MSCE/BuiltIns/RenderComponents/: baseRendererComponent.hpp
src/MSCE/Common/: CMakeLists.txt  handle.hpp  iHasIdMember.h  registry.hpp  smartPointerList.cpp  smartPointerList.h  smartUniquePointerList.hpp  vector.cpp  vector.h
src/MSCE/Common/Colors/: CMakeLists.txt
src/MSCE/Common/Interfaces/: CMakeLists.txt  Singleton.hpp
src/MSCE/Docs/Pages/: mainpage.md
src/MSCE/ECS/: CMakeLists.txt  component.h  entity.cpp  entity.h  system.cpp  system.h
src/MSCE/Events/: event.h  glEvents.h  prototypeEvents.h
src/MSCE/Graphics/: CMakeLists.txt  MSCEWindow.cpp  MSCEWindow.h  color.cpp  color.h  shaders.cpp  shaders.h  shape.cpp  shape.h
src/MSCE/Managers/: CMakeLists.txt  componentManager.cpp  componentManager.h  entityManager.cpp  entityManager.h  enumManager.cpp  enumManager.h  eventManager.cpp  eventManager.h  prototypeManager.cpp  prototypeManager.h  shaderManager.cpp  shaderManager.h  systemManager.cpp  systemManager.h
src/MSCE/Platform/: CMakeLists.txt  platform.h  platform_linux.cpp  platform_windows.cpp
src/MSCE/Prototypes/: CMakeLists.txt  entityPrototype.hpp  iPrototype.hpp  prototype.hpp  shaderPrototype.hpp
src/MSCE/Reflection/: CMakeLists.txt  reflection.cpp  reflection.h  reflection_concepts.h
src/MSCE/Serialization/: serializer.h
src/MSCE/Termination/: CMakeLists.txt  terminator.cpp  terminator.h
src/MSCE/Types/: CMakeLists.txt  enum.cpp  enum.hpp  singleton.hpp
src/MSCE/Types/Collections/: handle.hpp  registry.hpp  smartUniquePointerList.hpp  tree.hpp
src/Managers/: CMakeLists.txt  componentManager.cpp  componentManager.h  entityManager.cpp  entityManager.h  systemManager.cpp  systemManager.h
tests/: CMakeLists.txt  events.cpp  main.cpp  prototypes.cpp  reflection.cpp  system_registry.cpp  system_registry.h  system_registry.hpp  test_configs.h  test_constants.h  tests.cpp  tree.cpp
tests/Common/: smartPointerLists.cpp  vector.cpp
tests/ECS/: component.cpp  entity.cpp  system.cpp
tests/ECS/Common/: vector.cpp
tests/ECS/Common/Colors/: rgba.cpp
tests/ECS/Graphics/Colors/: rgba.cpp
tests/ECS/Graphics/Vectors/: vector.cpp
tests/ECS/System/: system.cpp
tests/Graphics/: color.cpp  shape.cpp
